<resources>
    <string name="app_name">Weather or not</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Add Location -->
    <string name="add_location">Add Location</string>
    <string name="enter_location_or_zip">Enter location name or zip code</string>

    <!-- details -->
    <string name="temp_hi">Hi</string>
    <string name="temp_lo">Lo</string>
    <string name="wind">Wind</string>
    <string name="humidity">Humidity</string>

    <!-- wind setting -->
    <string name="wind_label">Wind</string>
    <string name="unit_mph">MPH</string>
    <string name="unit_kph">KPH</string>

    <!-- temp setting -->
    <string name="temp_label">Temp</string>
    <string name="unit_celsius">C\u00B0</string>
    <string name="unit_fahrenheit">F\u00B0</string>

    <!-- threads setting -->
    <string name="theads_label">Threads</string>
    <string name="unit_one">One</string>
    <string name="unit_multi">Multi</string>

    <!-- API factory setting -->
    <string name="api_label">API</string>
    <string name="open_weather_map">OWM</string>
    <string name="yahoo">Yahoo</string>

    <!-- messages and toasts -->
    <string name="enable_location">Please enable <u>location services</u> in order to get weather information for your current location.</string>
    <string name="confirm_delete_location">Delete this location?</string>
    <string name="location_not_found">Location not found</string>

    <!-- dialogs strings -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
</resources>
