<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_large">

    <TextView
        android:id="@+id/locationTextView"
        android:textColor="@color/conditions_text_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35dp" />

    <ImageView
        android:layout_below="@id/locationTextView"
        android:src="@drawable/cond_partly"
        android:id="@+id/conditionsIconImageView"
        android:layout_width="@dimen/conditions_icon_size"
        android:layout_height="@dimen/conditions_icon_size" />

    <TextView
        android:id="@+id/conditionTextView"
        android:textColor="@color/conditions_text_color"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/locationTextView"
        android:layout_toRightOf="@id/conditionsIconImageView"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/temperatureTextView"
        android:textColor="@color/conditions_text_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/conditionsIconImageView"
        android:textSize="80dp" />

    <TextView
        android:id="@+id/temperatureUnitTextView"
        android:textColor="@color/conditions_text_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_below="@id/conditionsIconImageView"
        android:layout_toRightOf="@id/temperatureTextView"
        android:textSize="40dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_toRightOf="@id/temperatureUnitTextView"
        android:layout_below="@id/conditionsIconImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            style="@style/temp_details_layout">
            <TextView
                android:text="@string/temp_hi"
                style="@style/temp_details"/>
            <TextView
                android:id="@+id/tempHiTextView"
                style="@style/temp_details"/>
        </LinearLayout>
        <LinearLayout
            style="@style/temp_details_layout">
            <TextView
                android:text="@string/temp_lo"
                style="@style/temp_details"/>
            <TextView
                android:id="@+id/tempLoTextView"
                style="@style/temp_details"/>
        </LinearLayout>
        <LinearLayout
            style="@style/temp_details_layout">
            <TextView
                android:text="@string/humidity"
                style="@style/temp_details"/>
            <TextView
                android:id="@+id/humidityTextView"
                style="@style/temp_details"/>
        </LinearLayout>
        <LinearLayout
            style="@style/temp_details_layout">
            <TextView
                android:text="@string/wind"
                style="@style/temp_details"/>
            <TextView
                android:id="@+id/windTextView"
                style="@style/temp_details"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>